monday 11/30 added search page, made nav partial, tested seeding

--- a/views/partials/loadBlock.handlebars
+++ b/views/partials/loadBlock.handlebars
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-	<div class="col-lg-10 p-2 m-2 border rounded" data-id="{{dataValues.id}}">
+	<div class="col-lg-10 p-2 m-2 border rounded enRoute" data-id="{{dataValues.id}}">
 		
 		<p>Broker: {{dataValues.broker}}</p>
 		<p>Driver: {{Driver.dataValues.driverName}}</p>
