--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,60 +1,9 @@
 <!-- Navigation -->
 <div class="wrapper">
   <!-- Sidebar -->
-  <nav id="sidebar" class="active">
-    <div class="sidebar-header">
-      <h3>Bootstrap Sidebar</h3>
-    </div>
-
-    <ul class="list-unstyled components">
-      <p>Dummy Heading</p>
-      <li class="active">
-        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
-        <ul class="collapse list-unstyled" id="homeSubmenu">
-          <li>
-            <a href="#">Home 1</a>
-          </li>
-          <li>
-            <a href="#">Home 2</a>
-          </li>
-          <li>
-            <a href="#">Home 3</a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">About</a>
-      </li>
-      <li>
-        <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Add Asset</a>
-        <ul class="collapse list-unstyled" id="pageSubmenu">
-          <li>
-            <a href="#" data-toggle="modal" data-target="#addDriver">Add Driver</a>
-          </li>
-          <li>
-            <a href="#" data-toggle="modal" data-target="#addLoad">Add Load</a>
-          </li>
-          <li>
-            <a href="#">Page 3</a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a href="#">Portfolio</a>
-      </li>
-      <li>
-        <a href="#">Contact</a>
-      </li>
-    </ul>
-
-  </nav>
+  {{>nav}}
   <!-- Page Content -->
   <div id="content">
-  
-  
-  
-  
-  
     <!-- Page Content -->
     {{!-- <div class="container"> --}}
     <!-- JUMBOTRON -->
@@ -139,7 +88,7 @@
      <div class="col-lg-3 m-3 border border-dark rounded">
         <div class="row justify-content-center">
           <div class="col-lg-12 ml-5">
-            <h4 class="text-center">En Route Tracker</h4>
+            <h4 class="text-center">Look Ahead</h4>
           </div>
         </div> 
         <div>
