--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,9 +27,9 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 		crossorigin="anonymous"></script>
-	{{!-- <script
+	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwAD05ZTumJwhO2xf087sz5d-zIG97ak0&callback=initMap&libraries=&v=weekly"
-		defer></script> --}}
+		defer></script>
 	<script src="/assets/js/index.js"></script>
 
 
