messing with colors

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
   <!-- Sidebar -->
   <nav id="sidebar" class="active">
     <div class="sidebar-header">
-      <img src="public/assets/images/loaded.png" alt="Loaded">
+      <img src="../public/assets/images/loaded.png" alt="Loaded">
     </div>
 
     <ul class="list-unstyled components">
@@ -50,10 +50,10 @@
     <!-- Page Content -->
     {{!-- <div class="container"> --}}
     <!-- JUMBOTRON -->
-    <div class="jumbotron jumbotron-fluid rounded bg-success">
+    <div class="jumbotron jumbotron-fluid rounded bg-gray">
       <div class="container">
-        <img src="public/assets/images/loaded.png" alt="Loaded">
-        <p class="lead">Tag line Here!</p>
+        <img src="truckTracker/public/assets/images/loaded.png" alt="Loaded">
+        <p class="lead">Get loaded.</p>
       </div>
     </div>
   
