--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -51,7 +51,7 @@ a, a:hover, a:focus {
 
 #sidebar .sidebar-header {
   padding: 20px;
-  background: #ffffff;
+  background: Gray;
 }
 
 #sidebar ul.components {
