change the look of the sidebar and currently adding calendar feature

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -44,7 +44,7 @@ a, a:hover, a:focus {
 
 #sidebar {
   /* don't forget to add all the previously mentioned styles here too */
-  background: #7386D5;
+  background: #23272a;
   color: #fff;
   transition: all 0.3s;
 }
@@ -56,7 +56,7 @@ a, a:hover, a:focus {
 
 #sidebar ul.components {
   padding: 20px 0;
-  border-bottom: 1px solid #47748b;
+  border-bottom: 1px solid #23272a;
 }
 
 #sidebar ul p {
@@ -70,16 +70,22 @@ a, a:hover, a:focus {
   display: block;
 }
 #sidebar ul li a:hover {
-  color: #7386D5;
-  background: #fff;
+  color: #fff;
+  background: #2c2f33;
 }
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
   color: #fff;
-  background: #6d7fcc;
+  background: #23272a;
 }
 ul ul a {
   font-size: 0.9em !important;
   padding-left: 30px !important;
-  background: #6d7fcc;
+  background: #23272a;
+}
+
+a {
+  color: #fff !important;
+  background-color: transparent;
+  text-decoration: none;
 }
