--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
 		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
+	<link href="jquery.datetimepicker.min.css" rel="stylesheet"/>
 
 	{{!-- Timeline --}}
 	<link title="timeline-styles" rel="stylesheet"
@@ -30,6 +30,7 @@
 	{{!-- <script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwAD05ZTumJwhO2xf087sz5d-zIG97ak0&callback=initMap&libraries=&v=weekly"
 		defer></script> --}}
+	<script src="jquery.datetimepicker.full.min.js"></script>
 	<script src="/assets/js/index.js"></script>
 
 
