--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwAD05ZTumJwhO2xf087sz5d-zIG97ak0&callback=initMap&libraries=&v=weekly"
 		defer></script>
 	<script src="/assets/js/index.js"></script>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
 
 
 </head>
