--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,10 +1,10 @@
 <nav id="sidebar" class="active">
     <div class="sidebar-header">
-      <h3>Bootstrap Sidebar</h3>
+      <h3>Welcome to Loaded</h3>
+      <p>A logistic platform for tracking shipments</p>
     </div>
 
     <ul class="list-unstyled components">
-      <p>Dummy Heading</p>
       <li class="active">
         <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
         <ul class="collapse list-unstyled" id="homeSubmenu">
@@ -31,13 +31,7 @@
           <li>
             <a href="#" data-toggle="modal" data-target="#addLoad">Add Load</a>
           </li>
-          <li>
-            <a href="#">Page 3</a>
-          </li>
         </ul>
-      </li>
-      <li>
-        <a href="#">Portfolio</a>
       </li>
       <li>
         <a href="#">Contact</a>
