--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,11 +29,9 @@
 		crossorigin="anonymous"></script>
 	
 	<script src="/assets/js/index.js"></script>
-<<<<<<< HEAD
-	
-=======
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
->>>>>>> aeb4e74d52f60e0ba71e11a6e1e6468d3d1af908
+
+	{{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script> --}}
+
 
 
 </head>
