--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,10 +7,10 @@
     <!-- Page Content -->
     {{!-- <div class="container"> --}}
     <!-- JUMBOTRON -->
-    <div class="jumbotron jumbotron-fluid rounded bg-success">
+    <div class="jumbotron jumbotron-fluid rounded bg-#808080">
       <div class="container">
-        <h1 class="display-4">Logo here!</h1>
-        <p class="lead">Tag line Here!</p>
+        <img src="/public/assets/images/LOADED.png" class="img-fluid" alt="Loaded">
+        <p class="lead">A logistic platform for tracking shipments.</p>
       </div>
     </div>
   
