--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -40,24 +40,25 @@ a, a:hover, a:focus {
   color: inherit;
   text-decoration: none;
   transition: all 0.3s;
+  color: #000000
 }
 
 
 #sidebar {
   /* don't forget to add all the previously mentioned styles here too */
-  background: #7386D5;
+  background: #808080;
   color: #fff;
   transition: all 0.3s;
 }
 
 #sidebar .sidebar-header {
   padding: 20px;
-  background: #6d7fcc;
+  background: #808080;
 }
 
 #sidebar ul.components {
   padding: 20px 0;
-  border-bottom: 1px solid #47748b;
+  border-bottom: 1px solid #808080;
 }
 
 #sidebar ul p {
@@ -69,20 +70,21 @@ a, a:hover, a:focus {
   padding: 10px;
   font-size: 1.1em;
   display: block;
+  color: #000000
 }
 #sidebar ul li a:hover {
-  color: #7386D5;
+  color: #808080;
   background: #fff;
 }
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
   color: #fff;
-  background: #6d7fcc;
+  background: #808080;
 }
 ul ul a {
   font-size: 0.9em !important;
   padding-left: 30px !important;
-  background: #6d7fcc;
+  background: #808080;
 }
 
 .results{
