--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,26 +1,19 @@
 <nav id="sidebar" class="active">
     <div class="sidebar-header">
       <h3>Welcome to Loaded</h3>
-      <p>A logistic platform for tracking shipments</p>
     </div>
 
     <ul class="list-unstyled components">
       <li class="active">
-        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
+        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Menu</a>
         <ul class="collapse list-unstyled" id="homeSubmenu">
           <li>
-            <a href="#">Home 1</a>
+            <a href="#">Dashboard</a>
           </li>
           <li>
-            <a href="#">Home 2</a>
-          </li>
-          <li>
-            <a href="#">Home 3</a>
+            <a href="search">Search</a>
           </li>
         </ul>
-      </li>
-      <li>
-        <a href="#">About</a>
       </li>
       <li>
         <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Add Asset</a>
@@ -32,9 +25,6 @@
             <a href="#" data-toggle="modal" data-target="#addLoad">Add Load</a>
           </li>
         </ul>
-      </li>
-      <li>
-        <a href="#">Contact</a>
       </li>
     </ul>
 
