--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -9,10 +9,10 @@
         <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
         <ul class="collapse list-unstyled" id="homeSubmenu">
           <li>
-            <a href="#">Home 1</a>
+            <a href="/#">Home 1</a>
           </li>
           <li>
-            <a href="#">Home 2</a>
+            <a href="/search">Search</a>
           </li>
           <li>
             <a href="#">Home 3</a>
