--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,8 +12,12 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Arvo', serif !important;
 }
 
+#logoImg {
+  max-width: 40%;
+}
 .wrapper {
   display: flex;
   width: 100%;
