--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
     <!-- JUMBOTRON -->
     <div class="jumbotron jumbotron-fluid rounded bg-#808080">
       <div class="container">
-        <img src="/public/assets/images/LOADED.png" class="img-fluid" alt="Loaded">
+        <img src="/assets/images/LOADED.png" class="img-fluid" id="logoImg" alt="Loaded">
         <p class="lead">A logistic platform for tracking shipments.</p>
       </div>
     </div>
