--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,27 +1,31 @@
-<div id="#loadResultDisplay">
-    <div class="wrapper">
+<div class="wrapper">
 
-        {{>nav}}
-
-     {{>header}}
-
-        <div>
-            <input placeholder="Search...." id="loadNum" type="text" />
+    {{>nav}}
+    
+    {{!-- <div style="width: 100%;">
+        {{>header}}
+    </div> --}}
+    
+    <div class= "content" >
+        {{>header}}
+        <div class="row justify-content-center">
+            <select id="selection">
+                <option>Choose...</option>
+                <option>Load #</option>
+                <option>Broker</option>
+            </select>
+            <input placeholder="Search...." id="searchValue" type="text" />
             <button id="loadSrch" type="search" class="btn btn-success">Create Author</button>
         </div>
-
-
 
         <div id="results-list">
         </div>
 
 
+
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
+        <script src='/assets/js/search.js'></script>
     </div>
-
 </div>
-
 {{>footer}}
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
-<script src='/assets/js/search.js'></script>
