--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,31 +1,61 @@
 <div class="wrapper">
 
     {{>nav}}
-    
+
     {{!-- <div style="width: 100%;">
         {{>header}}
     </div> --}}
-    
-    <div class= "content" >
+
+    <div class="content">
         {{>header}}
         <div class="row justify-content-center">
-            <select id="selection">
-                <option>Choose...</option>
-                <option>Load #</option>
-                <option>Broker</option>
-            </select>
-            <input placeholder="Search...." id="searchValue" type="text" />
-            <button id="loadSrch" type="search" class="btn btn-success">Create Author</button>
-        </div>
+            <div class="col-lg-12 card-margin">
+                <div class="card search-form">
+                    <div class="card-body p-0">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="row no-gutters">
+                                    <div class="col-lg-3 col-md-3 col-sm-12 p-0">
+                                        <select class="form-control" id="selection">
+                                            <option>Choose...</option>
+                                            <option>Load #</option>
+                                            <option>Broker</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-lg-8 col-md-6 col-sm-12 p-0">
+                                        <input placeholder="Search...." id="searchValue" type="text"
+                                            class="form-control" />
+                                    </div>
 
+                                    <button id="loadSrch" type="search" class="btn btn-base"><svg
+                                            xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round"
+                                            class="feather feather-search">
+                                            <circle cx="11" cy="11" r="8"></circle>
+                                            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="results-list">
+            
         </div>
-
-
-
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
-        <script src='/assets/js/search.js'></script>
     </div>
+
+
+
+
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
+    <script src='/assets/js/search.js'></script>
+</div>
 </div>
 {{>footer}}
