--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,6 +15,10 @@ html, body {
   font-family: 'Arvo', serif !important;
 }
 
+.jumbotron {
+
+}
+
 #logoImg {
   max-width: 40%;
 }
@@ -37,6 +41,14 @@ html, body {
 .content {
   width: 100%;
   flex-wrap: wrap;
+  background-image: url(https://i.pinimg.com/originals/23/7f/8c/237f8c42f6600344a3f3d143704523bb.jpg);
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover
+}
+
+.contentCol {
+  background-color: #808080;
 }
 
 /* navbar style */
