--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,23 +2,14 @@
 <div class="wrapper">
   <!-- Sidebar -->
   {{>nav}}
-  <!-- Page Content -->
+  
   <div class="content">
-    <!-- Page Content -->
-    {{!-- <div class="container"> --}}
-    <!-- JUMBOTRON -->
+    
     {{>header}}
-
-    <!-- Timeline -->
-    {{!-- <div class="card text-white bg-secondary my-5 py-4 text-center">
-      <div class="card-body">
-        <div id='timeline-embed' style="width: 100%; height: 400px"></div>
-      </div>
-    </div> --}}
 
 
     <div class="row justify-content-around ">
-      <div class="col-lg-3 m-3 border border-dark rounded">
+      <div class="col-lg-3 m-3 border border-dark rounded contentCol">
         <div class="row justify-content-center">
           <div class="col-lg-12 ml-5 ">
             <h4 class="text-center">En Route Tracker</h4>
@@ -36,7 +27,7 @@
         </div>
       </div>
       <!-- /.col-md-4 -->
-      <div class="col-lg-5 m-3 border border-dark rounded">
+      <div class="col-lg-5 m-3 border border-dark rounded contentCol">
         <div class="row justify-content-around">
           <div class="col-lg-12 ml-5  ">
             <h4 class="text-center">Load in Focus</h4>
@@ -85,7 +76,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3 m-3 border border-dark rounded">
+      <div class="col-lg-3 m-3 border border-dark rounded contentCol">
         <div class="row justify-content-center">
           <div class="col-lg-12 ml-5">
             <h4 class="text-center">Look Ahead</h4>
