--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -163,10 +163,14 @@
             <input id="puAddInput" type="text">
             <h6>Drop Off Address</h6>
             <input id="doAddInput" type="text">
+            <div class="input-group input-daterange" id="datetimepicker1">
             <h6>Pick Up Date & Time</h6>
             <input id="puTimeInput" type="text">
+            </div>
+            <div class="input-group input-daterange" id="datetimepicker2">
             <h6>Drop Off Date & Time</h6>
             <input id="doTimeInput" type="text">
+            </div>
           </div>
         </div>
       </div>
