debug search page

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -2,25 +2,8 @@
 <div id="handlebarsTest">
     <div class="wrapper">
 
-
-<div id="#loadResultDisplay">
-    <div class="wrapper">
-
-        {{>nav}}
-{{>header}}
-     
-
-        <div>
-            <input placeholder="Search...." id="loadNum" type="text" />
-            <button id="loadSrch" type="search" class="btn btn-success">Create Author</button>
-
-<div class="wrapper">
-
         {{>nav}}
 
-        {{!-- <div style="width: 100%;">
-        {{>header}}
-    </div> --}}
 
         <div class="content">
             {{>header}}
@@ -59,7 +42,9 @@
                     </div>
                 </div>
             </div>
+            <div id="results-list">
 
+            </div>
         </div>
 
 
