changed styling on search page

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -43,9 +43,9 @@
                 </div>
             </div>
         </div>
-        <div id="results-list">
+        <table id="results-list">
             
-        </div>
+        </table>
     </div>
 
 
