changed styling for en route items

--- a/views/partials/enRouteBlock.handlebars
+++ b/views/partials/enRouteBlock.handlebars
@@ -1,4 +1,4 @@
-<div class="row m-2 justify-content-between border border-dark rounded">
+<div class="row m-2 justify-content-between border border-dark rounded enRouted" >
 	<div class="col-lg-9 p-2 m-2  enRoute justify-content-center" data-id="{{dataValues.id}}">
 		
 		<p class="m-1">Broker: {{dataValues.broker}}</p>
