--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -145,3 +145,15 @@ only screen and (max-width: 760px),
 		white-space: nowrap;
   }
 }
+
+
+
+
+.enRouted:hover{
+transform: scale(1.008);
+background-color: #96969660;
+}
+.activ{
+background-color: #0d6fdea6;
+color: white
+}
