--- a/views/partials/enRouteBlock.handlebars
+++ b/views/partials/enRouteBlock.handlebars
@@ -7,8 +7,8 @@
 		<p class="m-1">Due Date: {{dataValues.dueDate}}</p>
 
 	</div>
-	<div class="col-lg-1 m-2 pr-4 justify-content-center" >
-		<button type="button" class="btn btn-secondary btn-sm">D</button>
+	<div class="col-lg-1 m-2 p-0 justify-content-start" >
+		<button type="button" class="btn btn-warning btn-sm"><i class="fas fa-truck"></i></button>
 	</div>
 </div>
 
