--- a/views/partials/lookAheadBlock.handlebars
+++ b/views/partials/lookAheadBlock.handlebars
@@ -19,7 +19,7 @@
 
 	</div>
 	<div class="col-lg-1 m-2 pr-4 justify-content-center" >
-		<button type="button" class="btn btn-secondary btn-sm">D</button>
+		<button type="button" class="btn btn-success btn-sm enRouteButton" data-id="{{dataValues.id}}"><i class="fas fa-truck"></i></button>
 	</div>
 </div>
 
