--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -42,12 +42,12 @@
                     </div>
                 </div>
             </div>
-           
+          <table id="results-list" class="mt-3">
+            
+        </table> 
         </div>
 
-        <table id="results-list">
-            
-        </table>
+        
     </div>
 
 
