--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,8 +12,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
 		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-	    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
+	<link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
 
 	
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -40,9 +40,9 @@
 
 	
 	
-	{{!-- <script defer
+	<script defer
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwAD05ZTumJwhO2xf087sz5d-zIG97ak0&libraries=&v=weekly">
-	</script> --}}
+	</script>
 </body>
 
 </html>
